(fix) wrap tables for overflow handling

--- a/src/styles.css
+++ b/src/styles.css
@@ -81,3 +81,8 @@ input[type="submit"]:disabled {
 main {
   flex: 1;
 }
+
+#table-wrapper {
+  max-width: 80%;
+  overflow-x: auto;
+}
